# digraph

./: .travis.yaml  .travis.yml  CMakeLists.txt  LICENSE  README.md
CMakeModules/: config.cmake
include/digraph/: digraph.h
test/: CMakeLists.txt  Source.cpp  test_digraph.cpp
